Fixed sprite clipping

--- a/img/sheet.css
+++ b/img/sheet.css
@@ -1,33 +1,33 @@
 .map-bridgeB {
   background-position: -2px -2px;
-  width: 195px; height: 328px;
+  width: 195px; height: 330px;
 }
 .map-bridgeC {
-  background-position: -869px -2px;
+  background-position: -895px -150px;
   width: 95px; height: 47px;
 }
 .map-construction {
-  background-position: -2px -909px;
-  width: 65px; height: 95px;
+  background-position: -224px -911px;
+  width: 70px; height: 100px;
 }
 .npc-cat-0 {
-  background-position: -652px -278px;
+  background-position: -678px -2px;
   width: 215px; height: 146px;
 }
 .npc-cat-1 {
-  background-position: -244px -579px;
+  background-position: -678px -150px;
   width: 215px; height: 146px;
 }
 .npc-door-0 {
-  background-position: -652px -2px;
-  width: 214px; height: 274px;
+  background-position: -224px -623px;
+  width: 220px; height: 286px;
 }
 .npc-door-1 {
-  background-position: -436px -2px;
-  width: 214px; height: 282px;
+  background-position: -2px -623px;
+  width: 220px; height: 286px;
 }
 .npc-fairy-0 {
-  background-position: -2px -332px;
+  background-position: -2px -334px;
   width: 235px; height: 287px;
 }
 .npc-fairy-1 {
@@ -35,10 +35,10 @@
   width: 235px; height: 287px;
 }
 .npc-fish-0 {
-  background-position: -239px -291px;
+  background-position: -436px -2px;
   width: 240px; height: 286px;
 }
 .npc-fish-1 {
-  background-position: -2px -621px;
+  background-position: -239px -291px;
   width: 240px; height: 286px;
 }
